--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,11 @@
-<div class="logo-wrapper">
-  <img class="logo-img" src="/images/logo.png" alt="Logo">
-  <a href="{{ "" | relLangURL }}" class="logo">
+<div class="logo-wrapper" style="float: left;
+  padding-left: 15px; padding-bottom: 10px;">
+  <img class="logo-img" src="/images/logo.png" alt="Logo" style="height: 50px;
+  border-radius: 50%;
+  vertical-align: center;">
+  <a href="{{ "" | relLangURL }}" class="logo" style="font-size: 36px;
+    font-family: Athelas, STHeiti, Microsoft Yahei, serif;
+    padding-left: 10px;">
     {{ if .Site.Params.logoTitle }}
       {{ .Site.Params.logoTitle | safeHTML }}
     {{ else }}
