Changé le logo Lenclume pour le dessin de la DFF. Ça rend pas parfaitement mais ça fait l'affaire.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="logo-wrapper" style="float: left;
   padding-left: 15px; padding-bottom: 10px;">
   <img class="logo-img" src="/images/logo.png" alt="Logo" style="height: 50px;
-  border-radius: 50%;
+  border-radius: 0%; padding-top: 10px; padding-bottom: 10px;
   vertical-align: center;">
   <a href="{{ "" | relLangURL }}" class="logo" style="font-size: 36px;
     font-family: Athelas, STHeiti, Microsoft Yahei, serif;
